# OpenCL-Benchmarks

./: CMakeLists.txt  GTX 1080 Ti.txt  Mali T860.txt  README.md  verification.py
benchmarks/: main.cc  ocl_helper.cc  ocl_helper.h  ocl_status.h
cmake/: find_cuda.cmake  find_opencl.cmake
ocl_kernels/: conv2d_1.cl  conv2d_2.cl  conv2d_3.cl  conv2d_3_1.cl  conv2d_4.cl  conv2d_5.cl  conv2d_6.cl  conv2d_7.cl  conv2d_8.cl  conv2d_image.cl  convolution.cl  element_add.cl  kernel_helper.h
